# bao-tree

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: tree_bench.rs
cli/: Cargo.toml  main.rs
examples/: cli.rs  encode_decode_async.rs  encode_decode_sync.rs
proptest-regressions/: bao_tree.txt  main.txt  rec.txt  tests.txt  tests2.txt  tree.txt
proptest-regressions/bao_tree/: tests.txt
src/: async.rs  async_store.rs  bao_tree.rs  compare.rs  error.rs  errors.rs  io.rs  iter.rs  lib.rs  macros.rs  main.rs  outboard.rs  range_set.rs  range_spec.rs  rec.rs  sparse_outboard.rs  sync_store.rs  tests.rs  tests2.rs  tree.rs  vec_store.rs
src/bao_tree/: async.rs  iter.rs  mod.rs  outboard.rs  stream.rs  tests.rs
src/io/: baofile.rs  error.rs  fsm.rs  mixed.rs  mod.rs  outboard.rs  sync.rs  tokio.rs
