[package]
name = "bao-tree"
version = "0.8.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "BLAKE3 verfiied streaming with custom chunk groups and range set queries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/n0-computer/bao-tree"
edition = "2021"
keywords = ["hashing"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroh-blake3 = "1.4.3"
range-collections = { version = "0.4.5", features = ["new_unchecked"] }
smallvec = "1"

bytes = { version = "1" }
tokio = { version = "1", features = ["io-util", "rt"], optional = true }
futures = { version = "0.3", optional = true }
self_cell = { version = "1" }
iroh-io = { version = "0.2.2", features = ["tokio-io"], default_features = false, optional = true }
positioned-io = { version = "0.3.1", default_features = false }

[features]
tokio_fsm = ["tokio", "futures", "iroh-io"]
default = ["tokio_fsm"]

[dev-dependencies]
hex = "0.4.3"
bao = "0.12.1"
tokio = { version = "1", features = ["full"] }
# abao with chunk group size 16 (abao default)
abao = { git = "https://github.com/n0-computer/abao", branch = "post-order-outboard", features = ["group_size_1k"], default_features = false }
proptest = "1.0.0"
rand = "0.8.5"
criterion = "0.4.0"
tempfile = "3.6.0"
warp = "0.3.5"
proc-macro2 = "1.0.66"
test-strategy = "0.3.1"

[[bench]]
name = "tree_bench"
harness = false

[workspace]
members = ["cli"]

