[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bao-tree = { path = "../" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.72"
bao = "0.12.1"
abao = "0.2.0"

[[bin]]
name = "bao-tree"
path = "main.rs"

[profile.release]
lto = true
